// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas componente <GifGrid/> Debe de mostrar correctamente el componente  1`] = `
<Fragment>
  <h3>
    Naruto
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas componente <GifGrid/> Debe de mostrar items cuando se cargan imagenes en el useFetchGifs 1`] = `
<Fragment>
  <h3>
    Naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
